syntax = "proto3";

option csharp_namespace = "gRPCServer";

package greet;

service Greeter {
  rpc SaveGreeting (GreetingRequest) returns (StatusResponse);
  rpc GetGreetings (Empty) returns (GreetingReplies);
}

message Empty {}

message StatusResponse {
	string summary = 1;
}

message GreetingRequest {
  string name = 1;
  string country = 2;
}

message GreetingReply {
  string message = 1;
}

message GreetingReplies {
	repeated GreetingReply replies = 1;
}
